[package]
name = "glct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgl"]
wgl = [
    "windows/Win32_Foundation",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_UI_WindowsAndMessaging",
    "windows/Win32_Graphics_OpenGL",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_System_LibraryLoader",
]

[dependencies]
gl = { version = "0.14.0" }

[target."cfg(windows)".dependencies.windows]
version = "0.52.0"
optional = true